--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
 # https://help.github.com/articles/about-codeowners/
-* @ConnorSheremeta @lagoan @mbarnett @murny @pgwillia
+* @ConnorSheremeta @lagoan @mbarnett @murny @pgwillia @piyapongch
