Remove docker in favour of github actions services

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -16,10 +16,12 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    services:
+      redis:
+        image: redis:alpine
+        ports: ["6379:6379"]
     steps:
     - uses: actions/checkout@v2
-    - name: Build the docker-compose stack
-      run: docker-compose -f docker-compose-ci.yml up -d
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
