--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -23,5 +23,9 @@ jobs:
       run: bundle install
     - name: Lint with RuboCop
       run: bundle exec rubocop --parallel
+    - name: Run Danger
+      env:
+        DANGER_GITHUB_API_TOKEN: ${{ secrets.DANGER_GITHUB_API_TOKEN }}
+      run: bundle exec danger
     - name: Run tests
       run: bundle exec rake spec
