Add delay on entity re-ingestion on failed attempt
When an entity failed to be deposited, PMPY would only wait the minimum age to retry to ingest the entity. This creates the problem where we don't let the problem to be fixed and we flood the logs with information that is no longer useful.

This change doubles the time of each attempt to give space for the problems to be fixed. There are 3 configuration parameters added:

- ingestion_prefix : The prefix used for redis keys storing the failed attempt count - Default value of  - Default value of `prod:pmpy_ingest_attempt:`
- ingestion_attempts : The max number of re-ingestion attempts - Default value of `15`
- first_failed_wait : The time to add at the beginning which will be double every retry - Default value of `10`

The default values will keep retrying for around a week and will drop the entity for ingestion after that.

This is related to issue [#297](https://github.com/ualbertalib/pushmi_pullyu/issues/297).

--- a/examples/pushmi_pullyu.yml
+++ b/examples/pushmi_pullyu.yml
@@ -16,6 +16,9 @@ piddir: tmp/pids
 workdir: tmp/work
 process_name: pushmi_pullyu
 queue_name: dev:pmpy_queue
+ingestion_prefix: "'prod:pmpy_ingest_attempt:'" 
+ingestion_attempts: 15
+first_failed_wait: 10
 minimum_age: 0
 
 redis:
