--- a/examples/pushmi_pullyu.yml
+++ b/examples/pushmi_pullyu.yml
@@ -24,14 +24,13 @@ minimum_age: 0
 redis:
   url: redis://localhost:6379
 
-#parameters project_name and project_domain_name are required only for keystone v3 authentication
+#parameters project_name and user_domain are required only for keystone v3 authentication
 swift:
-  tenant: tester
   username: test:tester
   password: testing
   auth_url: http://localhost:8080/auth/v1.0
   project_name: demo
-  project_domain_name: default
+  user_domain: default
   container: ERA
 
 rollbar:
