Add support for V3 authentication for Swift
This commit adds configuration options to create Swift depositer objects
configured with V3 authentication.

This configuration will be used with the move to OLRC.

--- a/examples/pushmi_pullyu.yml
+++ b/examples/pushmi_pullyu.yml
@@ -33,6 +33,9 @@ swift:
   project_name: demo
   project_domain_name: default
   container: ERA
+  # These 2 extra parameters are now required for keystone v3 authentication
+  auth_version: v3
+  user_domain: default
 
 rollbar:
   token: 'abc123xyz'
