--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,6 +4,10 @@
 # https://github.com/bbatsov/rubocop/blob/master/config/enabled.yml
 require: rubocop-rspec
 
+# TODO: update reference once merged.
+inherit_from:
+  - https://raw.githubusercontent.com/ualbertalib/library_applications_development_inclusive_language/cds/initial-commit/inclusive_language_rubocop.yml
+
 AllCops:
   DisplayCopNames: true
   DisplayStyleGuide: true
